feat: support multiple + parallel outputs